Fixed errors after merge

--- a/Source/kCura.IntegrationPoints.UITests/UiTestsConfig/PL5.config
+++ b/Source/kCura.IntegrationPoints.UITests/UiTestsConfig/PL5.config
@@ -17,6 +17,9 @@
 		<add key="databaseUserId" value="EDDSdbo" />
 		<add key="connectionStringEDDS" value="data source=IL1DDMLPL5DB001;initial catalog=EDDS;persist security info=False;user id={1};password={2}; workstation id={0};packet size=4096" />
 		<add key="connectionStringWorkspace" value="data source=IL1DDMLPL5DB001; initial catalog=EDDS{0};persist security info=False;user id={2};password={3}; workstation id={1};packet size=4096" />
-		
-	</appSettings>
+
+    <add key="ftpConnectionPath" value="IL1DDMLPL3AG001.kcura.corp" />
+    <add key="ftpUsername" value="ftpuser" />
+    <add key="ftpPassword" value="ftppass" />
+  </appSettings>
 </configuration>
