--- a/Source/kCura.IntegrationPoints.UITests/kCura.IntegrationPoints.UITests.csproj
+++ b/Source/kCura.IntegrationPoints.UITests/kCura.IntegrationPoints.UITests.csproj
@@ -74,6 +74,7 @@
     <Compile Include="Pages\FirstPage.cs" />
     <Compile Include="Pages\ImportFirstPage.cs" />
     <Compile Include="Pages\ImportThirdPage.cs" />
+    <Compile Include="Pages\ImportWithFTPSecondPage.cs" />
     <Compile Include="Pages\IntegrationPointDetailsPage.cs" />
     <Compile Include="Pages\IntegrationPointsPage.cs" />
     <Compile Include="Pages\ExportToFileSecondPage.cs" />
