--- a/Source/kCura.IntegrationPoint.Tests.Core/kCura.IntegrationPoint.Tests.Core.csproj
+++ b/Source/kCura.IntegrationPoint.Tests.Core/kCura.IntegrationPoint.Tests.Core.csproj
@@ -119,6 +119,7 @@
     <Compile Include="Extensions\JobExtensions.cs" />
     <Compile Include="Extensions\ObjectExtensions.cs" />
     <Compile Include="Extensions\ObjectPermissionListExtension.cs" />
+    <Compile Include="Extensions\SecureStringExtension.cs" />
     <Compile Include="FieldMaps.cs" />
     <Compile Include="Fields.cs" />
     <Compile Include="FileToBase64Converter.cs" />
