--- a/Source/kCura.IntegrationPoints.UITests/UiTestsConfig/testvm.config
+++ b/Source/kCura.IntegrationPoints.UITests/UiTestsConfig/testvm.config
@@ -17,5 +17,6 @@
 		<add key="connectionStringEDDS" value="data source=TESTVM.kcura.corp\EDDSINSTANCE001;initial catalog=EDDS;persist security info=False;user id={1};password={2}; workstation id={0};packet size=4096" />
 		<add key="connectionStringWorkspace" value="data source=TESTVM.kcura.corp\EDDSINSTANCE001; initial catalog=EDDS{0};persist security info=False;user id={2};password={3}; workstation id={1};packet size=4096" />
 
+	  <add key="fileshareLocation" value="\\TESTVM\fileshare"/>
 	</appSettings>
 </configuration>
