--- a/Source/kCura.IntegrationPoints.UITests/UiTestsConfig/PL4.config
+++ b/Source/kCura.IntegrationPoints.UITests/UiTestsConfig/PL4.config
@@ -5,15 +5,21 @@
 	</configSections>
 	<appSettings>
 		<add key="ProtocolVersion" value="https" />
+		<add key="RelativityInstanceAddress" value="il1ddmlpl4wb001.kcura.corp" />
 		<add key="targetHost" value="il1ddmlpl4wb001.kcura.corp" />
 		<add key="targetDbHost" value="il1ddmlpl4db001.kcura.corp" />
-		<add key="databasePassword" value="P@ssw0rd@1" />
-	    
-		<add key="relativityUserName" value="relativity.admin@relativity.com" />
-		<add key="relativityPassword" value="Test1234!" />
+
+		<add key="SQLUsername" value="EDDSdbo" />
+		<add key="SQLPassword" value="P@ssw0rd@1" />
+
+		<add key="AdminUsername" value="relativity.admin@relativity.com" />
+		<add key="AdminPassword" value="Test1234!" />
 		<add key="databaseUserId" value="EDDSdbo" />
 		<add key="connectionStringEDDS" value="data source=IL1DDMLPL4DB001;initial catalog=EDDS;persist security info=False;user id={1};password={2}; workstation id={0};packet size=4096" />
 		<add key="connectionStringWorkspace" value="data source=IL1DDMLPL4DB001; initial catalog=EDDS{0};persist security info=False;user id={2};password={3}; workstation id={1};packet size=4096" />
-		
+
+		<add key="ftpConnectionPath" value="IL1DDMLPL3AG001.kcura.corp" />
+		<add key="ftpUsername" value="ftpuser" />
+		<add key="ftpPassword" value="ftppass" />
 	</appSettings>
 </configuration>
