Implemented import from load file page objects for first page and for second page load file settings part

--- a/Source/kCura.IntegrationPoint.Tests.Core/kCura.IntegrationPoint.Tests.Core.csproj
+++ b/Source/kCura.IntegrationPoint.Tests.Core/kCura.IntegrationPoint.Tests.Core.csproj
@@ -143,6 +143,8 @@
     <Compile Include="Models\FTP\ImportFromFTPConnectionAndFileInfoModel.cs" />
     <Compile Include="Models\FTP\ImportFromFTPModel.cs" />
     <Compile Include="Models\ImportFromLoadFile\ImportFromLoadFileModel.cs" />
+    <Compile Include="Models\ImportFromLoadFile\ImportLoadFileSettingsModel.cs" />
+    <Compile Include="Models\ImportFromLoadFile\ImportType.cs" />
     <Compile Include="Models\Ldap\ImportFromLdapSettingsModel.cs" />
     <Compile Include="Models\Ldap\ImportFromLdapSourceConnectionModel.cs" />
     <Compile Include="Models\Ldap\ImportFromLdapModel.cs" />
