REL-204035 Updates related to documentation generation using SandCastle

--- a/Source/kCura.IntegrationPoints.Contracts/kCura.IntegrationPoints.Contracts.csproj
+++ b/Source/kCura.IntegrationPoints.Contracts/kCura.IntegrationPoints.Contracts.csproj
@@ -22,7 +22,7 @@
     <PlatformTarget>x64</PlatformTarget>
     <ErrorReport>prompt</ErrorReport>
     <CodeAnalysisRuleSet>MinimumRecommendedRules.ruleset</CodeAnalysisRuleSet>
-    <DocumentationFile>bin\kCura.IntegrationPoints.Contracts.XML</DocumentationFile>
+    <DocumentationFile>bin\x64\kCura.IntegrationPoints.Contracts.XML</DocumentationFile>
     <TreatWarningsAsErrors>true</TreatWarningsAsErrors>
     <WarningLevel>4</WarningLevel>
   </PropertyGroup>
