--- a/Source/kCura.IntegrationPoints.SourceProviderInstaller/kCura.IntegrationPoints.SourceProviderInstaller.csproj
+++ b/Source/kCura.IntegrationPoints.SourceProviderInstaller/kCura.IntegrationPoints.SourceProviderInstaller.csproj
@@ -24,7 +24,7 @@
     <ErrorReport>prompt</ErrorReport>
     <CodeAnalysisRuleSet>MinimumRecommendedRules.ruleset</CodeAnalysisRuleSet>
     <Prefer32Bit>false</Prefer32Bit>
-    <DocumentationFile>bin\kCura.IntegrationPoints.SourceProviderInstaller.xml</DocumentationFile>
+    <DocumentationFile>bin\x64\kCura.IntegrationPoints.SourceProviderInstaller.xml</DocumentationFile>
     <TreatWarningsAsErrors>true</TreatWarningsAsErrors>
     <WarningLevel>4</WarningLevel>
   </PropertyGroup>
