--- a/Source/kCura.IntegrationPoints.UITests/UiTestsConfig/PL4.config
+++ b/Source/kCura.IntegrationPoints.UITests/UiTestsConfig/PL4.config
@@ -21,5 +21,7 @@
 		<add key="ftpConnectionPath" value="IL1DDMLPL3AG001.kcura.corp" />
 		<add key="ftpUsername" value="ftpuser" />
 		<add key="ftpPassword" value="ftppass" />
-	</appSettings>
+
+	  <add key="fileshareLocation" value="\\il1ddmlpl4db001\fileshare"/>
+  </appSettings>
 </configuration>
