--- a/Source/kCura.IntegrationPoints.ImportProvider.Tests.Integration/kCura.IntegrationPoints.ImportProvider.Tests.Integration.csproj
+++ b/Source/kCura.IntegrationPoints.ImportProvider.Tests.Integration/kCura.IntegrationPoints.ImportProvider.Tests.Integration.csproj
@@ -57,6 +57,7 @@
     <Reference Include="System" />
     <Reference Include="System.configuration" />
     <Reference Include="System.Core" />
+    <Reference Include="System.Web.Extensions" />
     <Reference Include="System.Xml.Linq" />
     <Reference Include="System.Data.DataSetExtensions" />
     <Reference Include="Microsoft.CSharp" />
@@ -142,6 +143,11 @@
   </ItemGroup>
   <ItemGroup>
     <None Include="..\kCura.IntegrationPoint.Tests.Core\app.config" />
+  </ItemGroup>
+  <ItemGroup>
+    <Content Include="..\..\packages\kCura.FreeImage\lib\net45\FreeImage.dll">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </Content>
   </ItemGroup>
   <ItemGroup>
     <Content Include="TestDataForImport\CsvWithMetadata.csv">
