--- a/Source/kCura.IntegrationPoints.Agent.Tests.Integration/kCura.IntegrationPoints.Agent.Tests.Integration.csproj
+++ b/Source/kCura.IntegrationPoints.Agent.Tests.Integration/kCura.IntegrationPoints.Agent.Tests.Integration.csproj
@@ -48,6 +48,7 @@
     <Compile Include="..\..\Version\AssemblyInfo.cs">
       <Link>AssemblyInfo.cs</Link>
     </Compile>
+    <Compile Include="TestingAgent.cs" />
     <Compile Include="ExportServiceManagerTests.cs" />
     <Compile Include="RelativityProvider_ImportNativeFileCopyModeTests.cs" />
     <Compile Include="SendEmailManagerTests.cs" />
