--- a/Source/kCura.IntegrationPoints.ImportProvider.Tests.Integration/kCura.IntegrationPoints.ImportProvider.Tests.Integration.csproj
+++ b/Source/kCura.IntegrationPoints.ImportProvider.Tests.Integration/kCura.IntegrationPoints.ImportProvider.Tests.Integration.csproj
@@ -305,6 +305,22 @@ xcopy "$(ProjectDir)TestDataForImport" "$(ProjectDir)..\..\lib\UnitTests\TestDat
   <Choose>
     <When Condition="$(TargetFrameworkIdentifier) == '.NETFramework' And $(TargetFrameworkVersion) == 'v4.6.2'">
       <ItemGroup>
+        <Reference Include="FreeImage">
+          <HintPath>..\..\packages\kCura.FreeImage\lib\net45\FreeImage.dll</HintPath>
+          <Private>True</Private>
+          <Paket>True</Paket>
+        </Reference>
+        <Reference Include="FreeImageNET">
+          <HintPath>..\..\packages\kCura.FreeImage\lib\net45\FreeImageNET.dll</HintPath>
+          <Private>True</Private>
+          <Paket>True</Paket>
+        </Reference>
+      </ItemGroup>
+    </When>
+  </Choose>
+  <Choose>
+    <When Condition="$(TargetFrameworkIdentifier) == '.NETFramework' And $(TargetFrameworkVersion) == 'v4.6.2'">
+      <ItemGroup>
         <Reference Include="kCura.Relativity.Client">
           <HintPath>..\..\packages\kCura.Relativity.Client\lib\net462\kCura.Relativity.Client.dll</HintPath>
           <Private>True</Private>
