Created error catalog file along with auto generation of tt files

--- a/.gitignore
+++ b/.gitignore
@@ -86,3 +86,4 @@ DevelopmentScripts/IntegrationTestsResults.xml
 DevelopmentScripts/IntegrationTestsResults.html
 DevelopmentScripts/UITestsResults.xml
 DevelopmentScripts/UITestsResults.html
+/DevelopmentScripts/ValidationMessages.html
