--- a/Source/kCura.IntegrationPoints.Synchronizers.RDO/kCura.IntegrationPoints.Synchronizers.RDO.csproj
+++ b/Source/kCura.IntegrationPoints.Synchronizers.RDO/kCura.IntegrationPoints.Synchronizers.RDO.csproj
@@ -88,7 +88,7 @@
     <Compile Include="ImportAPI\ImportService.cs" />
     <Compile Include="ImportSettings.cs" />
     <Compile Include="NativeFileImportService.cs" />
-    <Compile Include="RdoCustodianSynchronizer.cs" />
+    <Compile Include="RdoEntitySynchronizer.cs" />
     <Compile Include="RdoSynchronizer.cs" />
     <Compile Include="RelativityFieldQuery.cs" />
     <Compile Include="Properties\ErrorMessages.Designer.cs">
