--- a/Source/kCura.IntegrationPoints.Core/kCura.IntegrationPoints.Core.csproj
+++ b/Source/kCura.IntegrationPoints.Core/kCura.IntegrationPoints.Core.csproj
@@ -328,12 +328,12 @@
     <Compile Include="Validation\RelativityProviderValidator\Parts\RelativityProviderWorkspaceNameValidator.cs" />
     <Compile Include="Validation\RelativityProviderValidator\Parts\TransferredObjectValidator.cs" />
     <Compile Include="Validation\RelativityProviderValidator\RelativityProviderConfigurationValidator.cs" />
-    <Compile Include="Services\CustodianManager\IManagerQueueService.cs" />
-    <Compile Include="Services\CustodianService.cs" />
-    <Compile Include="Services\CustodianManager\CustodianManagerDataReaderEnumerable.cs" />
-    <Compile Include="Services\CustodianManager\CustodianManagerJobParameters.cs" />
-    <Compile Include="Services\CustodianManager\CustodianManagerMap.cs" />
-    <Compile Include="Services\CustodianManager\ManagerQueueService.cs" />
+    <Compile Include="Services\EntityManager\IManagerQueueService.cs" />
+    <Compile Include="Services\EntityService.cs" />
+    <Compile Include="Services\EntityManager\EntityManagerDataReaderToEnumerableService.cs" />
+    <Compile Include="Services\EntityManager\EntityManagerJobParameters.cs" />
+    <Compile Include="Services\EntityManager\EntityManagerMap.cs" />
+    <Compile Include="Services\EntityManager\ManagerQueueService.cs" />
     <Compile Include="Services\DeleteHistoryErrorService.cs" />
     <Compile Include="Services\DeleteHistoryService.cs" />
     <Compile Include="Services\DeleteIntegrationPoints.cs" />
@@ -421,7 +421,7 @@
     <Compile Include="Services\SourceTypes\ISourceTypeFactory.cs" />
     <Compile Include="Services\SourceTypes\LdapSourceTypeCreator.cs" />
     <Compile Include="Services\SourceTypes\SourceTypeFactory.cs" />
-    <Compile Include="Services\Synchronizer\GeneralWithCustodianRdoSynchronizerFactory.cs" />
+    <Compile Include="Services\Synchronizer\GeneralWithEntityRdoSynchronizerFactory.cs" />
     <Compile Include="Services\Synchronizer\IRdoSynchronizerProvider.cs" />
     <Compile Include="Services\Synchronizer\RdoSynchronizerProvider.cs" />
     <Compile Include="Services\Tabs\ITabService.cs" />
