--- a/Source/kCura.IntegrationPoints.Core.Tests/kCura.IntegrationPoints.Core.Tests.csproj
+++ b/Source/kCura.IntegrationPoints.Core.Tests/kCura.IntegrationPoints.Core.Tests.csproj
@@ -143,6 +143,7 @@
     <Compile Include="Tagging\TagsCreatorTests.cs" />
     <Compile Include="Telemetry\ExportTelemetryMetricProviderTest.cs" />
     <Compile Include="Telemetry\TelemetryMangerTest.cs" />
+    <Compile Include="Utils\JsonUtilsTests.cs" />
     <Compile Include="Validation\ArtifactValidatorTests.cs" />
     <Compile Include="Validation\Helpers\NonValidCharactersValidatorTests.cs" />
     <Compile Include="Validation\ImportProductionValidatorTests.cs" />
