--- a/Source/kCura.IntegrationPoint.Tests.Core/kCura.IntegrationPoint.Tests.Core.csproj
+++ b/Source/kCura.IntegrationPoint.Tests.Core/kCura.IntegrationPoint.Tests.Core.csproj
@@ -141,7 +141,7 @@
     <Compile Include="Models\Constants\ExportToLoadFile\ExportToLoadFileImageFileTypeConstants.cs" />
     <Compile Include="Models\Constants\ExportToLoadFile\ExportToLoadFileSourceConstants.cs" />
     <Compile Include="Models\Constants\ExportToLoadFile\ExportToLoadFileNameOutputFilesAfterConstants.cs" />
-    <Compile Include="Models\Constants\ExportToLoadFile\ExportToLoadFileTransferredObjectConstants.cs" />
+    <Compile Include="Models\Constants\Shared\TransferredObjectConstants.cs" />
     <Compile Include="Models\CustodianExportToLoadFileDetails.cs" />
     <Compile Include="Models\CustodianExportToLoadFileModel.cs" />
     <Compile Include="Models\DocumentsTestData.cs" />
