--- a/Source/kCura.IntegrationPoints.Synchronizers.RDO/kCura.IntegrationPoints.Synchronizers.RDO.csproj
+++ b/Source/kCura.IntegrationPoints.Synchronizers.RDO/kCura.IntegrationPoints.Synchronizers.RDO.csproj
@@ -69,7 +69,9 @@
     <Compile Include="JobImport\Implementations\NativeImportSettingsBuilder.cs" />
     <Compile Include="JobImport\Implementations\NativeJobImport.cs" />
     <Compile Include="JobImport\Implementations\ProductionImageJobImport.cs" />
-    <Compile Include="JobImport\ImportJobStatisticsMessage.cs" />
+    <Compile Include="JobImport\Messages\ImportJobMessageBase.cs" />
+    <Compile Include="JobImport\Messages\ImportJobStatisticsMessage.cs" />
+    <Compile Include="JobImport\Messages\ImportJobThroughputBytesMessage.cs" />
     <Compile Include="Model\Serializer\ImportSettingsForLogSerializer.cs" />
     <Compile Include="Model\Serializer\SerializeContractResolverWithIgnoredProperties.cs" />
     <Compile Include="RdoFieldSynchronizerBase.cs" />
